<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="image_view">image view</string>
    <string name="image">image</string>
    <string name="start">start</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="_30sp">30sp</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="upcoming_exercise_is">Upcoming exercise is..</string>
    <string name="jumping_jack">Jumping Jack</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_finished_the_workout">You have finished the workout!</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="normal">Normal</string>
    <string name="calculate">CALCULATE</string>
    <string name="_15_00">15.00</string>
    <string name="condition">Condition</string>
    <string name="feet">feet</string>
    <string name="history_image">history_image</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="_7minuteworkout">7MinuteWorkout</string>
    <string name="take_first_steps_towards_your_fitness_journey">Take first step towards your fitness journey..</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="please_wait">Please wait..</string>
    <string name="sign_out">Sign Out</string>
</resources>