<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal"
    tools:context=".activities.IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <com.scwang.wave.MultiWaveHeader
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:mwhCloseColor="@color/colorAssent"
            app:mwhStartColor="@color/purple_500"
            app:mwhWaveHeight="50dp" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7minuteworkout"
        android:fontFamily="@font/weloved_freetrial"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAssent"/>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:src="@drawable/cover_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/take_first_steps_towards_your_fitness_journey"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/shade" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="12dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:layout_marginEnd="12dp"
        android:background="@drawable/shade" />





</LinearLayout>