<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.bmi_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:background="@color/colorAssent"
        app:titleTextColor="@color/white"
        android:theme="@style/ToolbarTheme"
        android:layout_height="?android:attr/actionBarSize" />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_bmi_activity"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:background="@drawable/radio_group_tab_background">

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tabs_selector"
            android:checked="true"
            android:text="METRIC UNITS"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"/>

        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tabs_selector"
            android:checked="false"
            android:text="US UNITS"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"
            android:layout_width="0dp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/llUnitsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/rgUnits"
        android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:textSize="16sp"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMetricUnitHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_in_cm"
                android:textSize="16sp"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:textSize="16sp"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llUsUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsUnitHeightFeet"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsUnitHeightFeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feet"
                android:textSize="16sp"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsUnitHeightInch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsUnitHeightInch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Inch"
                    android:textSize="16sp"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llDisplayBMIResult"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvYourBMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_bmi"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvBMIValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/_15_00"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvBMIType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/condition"
                android:gravity="center"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tvBMIDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                tools:text="@string/normal"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCalculateUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="35dp"
            android:background="@color/colorAssent"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

</RelativeLayout>