<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/finish_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:title="7MinuteWorkout"
        app:titleTextColor="@color/white"
        android:background="@color/colorAssent"/>

    <TextView
        android:id="@+id/finish_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="END"
        android:textSize="50sp"
        android:textColor="@color/colorAssent"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/item_circular_color_accent_border"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/tick_layout" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="20sp"
           style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
           android:layout_marginTop="15dp"
           android:textColor="#171717"
           android:text="@string/congratulations"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:layout_marginTop="2dp"
            android:textColor="#171717"
            android:text="@string/you_have_finished_the_workout"/>

        <Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:backgroundTint="@color/colorAssent"
            android:text="@string/finish"
            android:padding="15dp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

</LinearLayout>
</LinearLayout>